<?php die(); ?>
Akeeba SocialLogin 4.1.0
================================================================================
# [MEDIUM] Creating a user without bypassing the user validation does not link the user account with the social login which was used to create the account.
# [LOW] The “Bypass user validation” option was not applied

Akeeba SocialLogin 4.0.3
================================================================================
# [HIGH] PHP exception on login page / module on Joomla 4.2 if the Apple plugin is enabled

Akeeba SocialLogin 4.0.2
================================================================================
# [MEDIUM] Could not install on Joomla 4.1

Akeeba SocialLogin 4.0.1
================================================================================
# [MEDIUM] SVG images do not display on sites installed in subdirectories
# [MEDIUM] User registration email sent with raw language strings instead of going through com_mails

Akeeba SocialLogin 4.0.0
================================================================================
~ Rewritten for Joomla 4
~ Bump minimum PHP version to 7.4
# [HIGH] Sign in with Apple did not work with PHP 8.0