@@ -1,6 +1,7 @@
 <?php die(); ?>
 Akeeba SocialLogin 4.1.0
 ================================================================================
++ Automatically get the redirection URL for com_users login pages
 # [MEDIUM] Creating a user without bypassing the user validation does not link the user account with the social login which was used to create the account.
 # [LOW] The “Bypass user validation” option was not applied
 
